gateway-api/blue-green/02-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: default
  labels:
    app.kubernetes.io/name: online-boutique-frontend
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - "student100-app1.devopsatolyesi.com"
    - "student100-k8s-app1.devopsatolyesi.com"
    - "student100-kind.devopsatolyesi.com"
    - "localhost"
    - "127.0.0.1"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-blue
          port: 80
          weight: 100
        - name: frontend-green
          port: 80
          weight: 0
